--- a/banking-control-panel/appsettings.json
+++ b/banking-control-panel/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=192.168.0.119;Port=5432;Database=banking;Username=test;Password=test@123"
+  },
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "4035be25-30c1-4f36-a20f-84c76d0bee50",
+    "Audience": "http://localhost",
+    "Issuer": "http://localhost"
+  }
 }
