--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       # Checkout the repository
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # Set up Docker
       - name: Set up Docker Buildx
@@ -27,7 +27,7 @@ jobs:
 
       # Build and optionally push the Docker image
       - name: Build Docker image
-        uses: docker/setup-buildx-action
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./banking-control-panel/Dockerfile
