--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,9 @@ jobs:
       # Set up Docker
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
+        with:
+          registry: 98.85.182.143:5005
+             
       # Log in to Docker Hub (if you need to push the image)
       # - name: Log in to Docker Hub
       #   uses: docker/login-action@v2
@@ -31,5 +33,5 @@ jobs:
         with:
           context: .
           file: ./banking-control-panel/Dockerfile
-          push: false # Set to false if you don't want to push the image
-          tags: your-image-name:latest
+          push: true # Set to false if you don't want to push the image
+          tags: 98.85.182.143:5005/banking:latest
