--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          registry: http://98.85.182.143:5005
-             
+          config-inline: |
+            [registry."98.85.182.143:5005"]
+              http = true
+              insecure = true
       # Log in to Docker Hub (if you need to push the image)
       # - name: Log in to Docker Hub
       #   uses: docker/login-action@v2
